Revert "Fix sidebar text overflow when resized"
This reverts commit ef2f3d3a9101dec14642d5da20a198382b52292c.

--- a/src/components/CategoryList/CategoryList.scss
+++ b/src/components/CategoryList/CategoryList.scss
@@ -13,10 +13,10 @@
   border-left: 1px solid #3e87b2;
 
   a {
-    display: flex;
-    align-items: center;
+    display: block;
     padding-left: 12px;
     height: 20px;
+    line-height: 20px;
     color: #8fb9cf;
     font-size: 12px;
 
@@ -33,11 +33,12 @@
 
       &:first-of-type {
         @include DosisFont;
-        flex: 0 0 50px;
+        float: right;
+        width: 50px;
         text-align: right;
       }
       &:last-of-type {
-        flex: 1 1 auto;
+        margin-right: 50px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
